--- a/src/app/views/pdc/create-and-update/create-and-update.component.html
+++ b/src/app/views/pdc/create-and-update/create-and-update.component.html
@@ -211,5 +211,6 @@
 
     </div>
     
-<button class="btn btn-primary" type="submit">submit</button>
+<button class="btn btn-primary button" type="submit" routerLink = "list">submit</button>
+<button class="btn btn-primary pbutton" type="button" (click)="backto()">Back</button>
 </form>
