View page changes

--- a/src/app/views/pdc/list-pdc/list-pdc.component.html
+++ b/src/app/views/pdc/list-pdc/list-pdc.component.html
@@ -48,7 +48,7 @@
                                     <mat-icon color="primary" routerLink = "../update">create</mat-icon>
                                 </button>  
                                 <button>
-                                    <mat-icon color="primary" (click)="viewValue()">visibility</mat-icon>
+                                    <mat-icon color="primary" (click)="viewValue(row._id)">visibility</mat-icon>
                                 </button>  
                             </td>
                         </ng-container>
